Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5946

jobstats are not expired if no new jobs arrive

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • Lustre 2.6.0, Lustre 2.5.3
    • None
    • 3
    • 16603

      The jobstats data is not expired for a device if new jobids are not arriving at the server. This means that the stats may stick around far longer than necessary. They should be expired when they get too old.

            niu Niu Yawei (Inactive)
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: